# zig_c_iterop_with_dll

./: .gitignore  CMakeLists.txt  README.md  Taskfile.yml
A_mathlib/: Taskfile.yml
A_mathlib/example/: CMakeLists.txt  Taskfile.yml
B_zig_code/: Taskfile.yml  build.zig  build.zig.zon
B_zig_code/lib/: mathlib.h
B_zig_code/lib/zigmath/: zigmath.zig
B_zig_code/src/: main.zig
C_c_example/: CMakeLists.txt  Taskfile.yml
C_c_example/src/: main.c
example/: CMakeLists.txt
example/include/: zigmath.h
example/src/: main.c
mathlib/: CMakeLists.txt  Taskfile.yml
mathlib/example/: main.c
zig_code/: Taskfile.yml  build.zig
zig_code/src/: main.zig
